@@ -90,6 +90,7 @@ class GeverSettingsAdpaterV1(object):
         oneoffixx_settings['fake_sid'] = api.portal.get_registry_record('fake_sid', interface=IOneoffixxSettings)
         oneoffixx_settings['double_encode_bug'] = api.portal.get_registry_record('double_encode_bug', interface=IOneoffixxSettings)  # noqa
         oneoffixx_settings['cache_timeout'] = api.portal.get_registry_record('cache_timeout', interface=IOneoffixxSettings)
+        oneoffixx_settings['scope'] = api.portal.get_registry_record('scope', interface=IOneoffixxSettings)
         return oneoffixx_settings
 
     def get_features(self):
