@@ -5,6 +5,7 @@ Changelog
 ---------------------
 
 - Fix has_children indexer which lead to duplicate brains. [njohner, phgross]
+- Add a configurable scope for Oneoffixx OAuth2 grant requests. [Rotonen]
 - Trash: Update and reindex modification date when trashing documents. [lgraf]
 - Respect tabbedview settings when generating a document excel export. [phgross]
 - Add file_extension indexer for mails. [phgross]
